Fixed so that image is bottom and right aligned, and so that it can be responsive (wip)

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -4,3 +4,7 @@ body {
   box-sizing: border-box;
   background-color: "#08162C";
 }
+
+html, body, #root, main {
+  height: 100%;
+}
